# Manim-ML

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  REPORT.md  flake.nix  manim.cfg  pyproject.toml  pyrightconfig.json  requirements.md  script.md
.claude/: CLAUDE.md  RALPH_SETUP.md  settings.local.json  setup-ralph.sh
.specify/memory/: constitution.md
media/Tex/: 283def438a6d63e2.tex
media/videos/judge_curve_complete/480p15/: JudgeCurveComplete.srt
media/voiceovers/: cache.json
scripts/: generate_manim_stubs.py
specs/001-judge-curve-video/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-judge-curve-video/checklists/: requirements.md
specs/001-judge-curve-video/contracts/: scene_interfaces.md
src/: __init__.py  config.py
src/utils/: __init__.py  color_utils.py  data_generator.py
stubs/manim/: __init__.pyi
stubs/manim/animation/: __init__.pyi  composition.pyi  creation.pyi  fading.pyi
stubs/manim/mobject/: __init__.pyi  mobject.pyi
stubs/manim/scene/: __init__.pyi
stubs/manim/utils/: __init__.pyi  rate_functions.pyi
tests/: __init__.py  test_data_generator.py  test_effects.py  test_scenes.py
videos/: __init__.py  judge_curve_main.py
videos/assets/data/: linear_data.csv  nonlinear_data.csv
videos/scenes/: __init__.py  example_scene.py  judge_curve_complete.py  section1_hallucination.py  section2_scale.py  section3_linear.py  section4_nonlinear.py  section5_synthesis.py  voiceover_example.py
videos/templates/: __init__.py  animations.py  custom_shapes.py  effects.py
(+5 files in other folders)
